# stm32-cxx

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
arch/arm/: arch.cmake
arch/arm/cm4f/: model.cmake
arch/arm/toolchain/gcc/: toolchain.cmake
board/NUCLEO-f429zi/: NUCLEO-f429zi.cmake  startup.S
board/nucleo-f429zi/: board.cmake
chip/stm32/: stm32.cmake
chip/stm32/inc/: stm32_pll_calculator.hpp  stm32_pll_calculator_static.hpp
chip/stm32/stm32f4xx/: stm32f4xx.cmake
chip/stm32/stm32f4xx/src/: system_stm32f4xx.c
chip/stm32/stm32f4xx/stm32f42xxx/: stm32f42xxx.cmake
chip/stm32/stm32f4xx/stm32f42xxx/stm32f429xx/: stm32f429xx.cmake
chip/stm32/stm32f4xx/stm32f42xxx/stm32f429xx/stm32f429zi/: stm32f429zi.cmake
chip/stm32/stm32f4xx/stm32f42xxx/stm32f429xx/stm32f429zi/inc/: stm32f429zi_constants.hpp  stm32f429zi_sysconfig.hpp  stm32f429zi_system.hpp
chip/stm32/stm32f4xx/stm32f42xxx/stm32f429xx/stm32f429zi/src/: stm32f429zi_system.cpp  syscalls.c  sysmem.c
prod/: prod.cmake
prod/inc/: System.hpp  stm32f4_pll_calculator.hpp
prod/src/: System.cpp  main.cpp  main.cxx
